@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2009-03-11 Warren L. DeLano <warren@delsci.com>	
+
+	* valence_mode
+	
 2009-03-10 Warren L. DeLano <warren@delsci.com>	
 
 	* dynamic_width settings and defaults
